Fix project info input too small

--- a/src/main/frontend/src/code-quarkus/pickers/info-picker.scss
+++ b/src/main/frontend/src/code-quarkus/pickers/info-picker.scss
@@ -15,8 +15,7 @@
       align-self: flex-start;
       order: 4;
       flex-grow: 1;
-      padding: 0 7x;
-     
+      padding: 0 7px;
     }
 
     .toggle-panel.open {
